--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@fortawesome/fontawesome-svg-core": "^6.5.2",
 		"@fortawesome/free-solid-svg-icons": "^6.5.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
+		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"axios": "^1.7.7",
 		"emailjs-com": "^3.2.0",
 		"leaflet": "^1.9.4",
